2021-04-28  Charlie Zender  <zender@uci.edu>

	* NCO 4.9.9-alpha05 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.9-alpha05: Aliso Summit';git push
	git tag -a 4.9.9-alpha05 -m 'ncremap tr allow_no_overlap';git push --tags

	* Merge latest GBG code from Juan

2021-04-21  Charlie Zender  <zender@uci.edu>

	* ncremap add TR GenerateOverlapMesh option --allow_no_overlap for regional-to-regional grids like GrIS

2021-04-20  Charlie Zender  <zender@uci.edu>

	* NCO 4.9.9-alpha04 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.9-alpha04: Aliso Summit';git push
	git tag -a 4.9.9-alpha04 -m 'ncremap crv area wrn, ccw_chk fix, msk fix, chk_map msk';git push --tags

	* nco_chk_map() print full mask_a/b error diagnostics only at higher debug level

	* Tidy nco_ply_lst.c

2021-04-19  Charlie Zender  <zender@uci.edu>

	* Merge Henry's fixes that provide area for masked cells and fix borken masks

	* Tidy nco_kd.c and brethen

2021-04-17  Charlie Zender  <zender@uci.edu>

	* nco_chk_map() add mask_a/b error diagnostics

2021-04-15  Charlie Zender  <zender@uci.edu>

	* nco.texi clarify that nco_grd_nfr() converts floating point zeros to integer zero masks values

	* ncremap nco_grd_nfr() protect area <=4*pi assertion since area might be in, e.g., km2 (ELM, RACMO)

2021-04-11  Charlie Zender  <zender@uci.edu>

	* ncremap nco_ccw_chk() fix bug where quadrilateral vertex D was always overwritten by vertex A
	Since 2016 this bug divided all quadrilaterals in two, halving all inferred curvilinear grid areas?

	* ncremap nco_grd_nfr() WARNING when global grid has suspicious area

2021-04-08  Charlie Zender  <zender@uci.edu>

	* NCO 4.9.9-alpha03 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.9-alpha03: Modern Times';git push
	git tag -a 4.9.9-alpha03 -m 'nco.texi: ncvardmnlatlon; ncclimo hfs mth_srt/end; ncremap CISM glc msk, rint() integers';git push --tags

	* ncremap nco_ntp_vrt() add same rint() code as nco_rgr_wgt()
